# aipdf

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml
src/aipdf/: __about__.py  __init__.py  ocr.py
tests/integration_tests/: test_aipdf.py
tests/unit_tests/: test_aipdf.py
