[metadata]
name = aipdf
description = A tool to extract PDF files to markdown, or any other format using AI
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src